--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "script/utils"]
 	path = script/utils
 	url = https://github.com/darthofcode/jsGameUtils
+[submodule "v-utils"]
+	path = v-utils
+	url = git@github.com:darthofcode/v-utils.git
